bad/bin_op_ge_null_null.example_compiler_output
ERROR
[1mbad/bin_op_ge_null_null.lat:3:7: [1;31merror: [0;1moperator >= is defined only for int values and string values, not `null` and `null`[m
	null >= null;
	     [1;32m^[m
